--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-layout: page
+---
+layout: home
 title: Randy Clarke
 subtitle: Community Engagement Professional
-use-site-title: true
+---
+
+Welcome to my personal website! Here you'll find information about my work in community engagement and political campaigns.
